# global_cloud

./: README.md  gh_push.sh  pubspec.yaml
.github/: FUNDING.yml
.github/workflows/: beta_compile.yaml
native_lib/: CMakeLists.txt  readme.md
package/global_cloud/: pubspec.yaml
package/global_cloud/example/: global_cloud_example.dart
package/global_cloud/lib/: global_cloud.dart
package/global_cloud/test/: global_cloud_test.dart
package/global_cloud_android/: pubspec.yaml
package/global_cloud_android/lib/: global_cloud_android.dart
package/global_cloud_android/test/: global_cloud_android_test.dart
package/global_cloud_apis/: pubspec.yaml
package/global_cloud_apis/example/: global_cloud_apis_example.dart
package/global_cloud_apis/lib/: global_cloud_apis.dart
package/global_cloud_apis/test/: global_cloud_apis_test.dart
package/global_cloud_assets_flutter/: pubspec.yaml
package/global_cloud_assets_flutter/lib/: global_cloud_assets_flutter.dart
package/global_cloud_assets_flutter/test/: global_cloud_assets_flutter_test.dart
package/global_cloud_cli/: pubspec.yaml
package/global_cloud_cli/example/: global_cloud_cli_example.dart
package/global_cloud_cli/lib/: global_cloud_cli.dart
package/global_cloud_cli/test/: global_cloud_cli_test.dart
package/global_cloud_client/: pubspec.yaml
package/global_cloud_client/example/: global_cloud_client_example.dart
package/global_cloud_dart/: pubspec.yaml
package/global_cloud_flutter/: pubspec.yaml
package/global_cloud_fucshia/: pubspec.yaml
package/global_cloud_ios/: pubspec.yaml
package/global_cloud_isar_scheme/: pubspec.yaml
package/global_cloud_linux/: README.md  pubspec.yaml
package/global_cloud_macos/: pubspec.yaml
package/global_cloud_scheme/: pubspec.yaml
package/global_cloud_server/: pubspec.yaml
package/global_cloud_web/: pubspec.yaml
package/global_cloud_windows/: LICENSE  pubspec.yaml
test/: global_cloud_test.dart
(+28 files in other folders)
